--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Hello world!</h1>
-    <p onclick="">Hello world</p>
+    <p onclick="">Hello worl</p>
 
     <!--script>
         alert(1);
