--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
-    <h1>Hello world!</h1>
-    <p onclick="">Hello worl</p>
-
-    <!--script>
-        alert(1);
-    </!--script -->
-    <script src="script.js"></script>
+    <div class="container">
+        <button class="someButton red">Click me!</button>
+    </div>
+    <script src="src/js/script.js"></script>
 </body>
 </html>
